Revert using threads